ocp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudlet-manager
  labels:
    app.kubernetes.io/part-of: cloudlet-manager
