ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloudlet-manager
  namespace: cloudlet-manager
  labels:
    app: cloudlet-frontend
    app.kubernetes.io/part-of: cloudlet-manager
spec:
  to:
    kind: Service
    name: cloudlet-frontend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
